--- a/css/style.css
+++ b/css/style.css
@@ -958,6 +958,7 @@ a {
     width: 100%;
     background-color: #562EC2;
     z-index: 100;
+    overflow: auto;
   }
   .header-active .header {
     padding-top: 25%;
